src/objects/SEO_Report__c.object
<CustomObject>
    <fields>
        <fullName>Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this report triggered manually?</description>
        <label>Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEO_Website__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SEO Website</label>
        <referenceTo>seoWebsite__c</referenceTo>
        <relationshipLabel>SEO Reports</relationshipLabel>
        <relationshipName>SEO_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Send Time</label>
        <type>DateTime</type>
    </fields>
    <label>SEO Report</label>
    <nameField>
        <label>SEO Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEO Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>